[project]
name = "langgraph-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "langchain>=1.2.13",
    "langchain-core>=1.2.20",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langsmith>=0.7.31",
    "numpy>=2.4.3",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]
